--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'war'
 apply plugin: "jettyEclipse"
 apply plugin: 'com.bmuschko.tomcat'
 
