--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     excludesList.each { m -> exclude module:m }
   }
   compile 'org.slf4j:slf4j-log4j12:1.7.6'
-  compile 'com.h2database:h2:1.4.187'
+  compile 'mysql:mysql-connector-java:5.1.36'
 
   testCompile("org.springframework:spring-test:${springVersion}")
 
